--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ qt_add_qml_module(appGameEnvSetter
     VERSION 1.0
     QML_FILES
         Main.qml
+        MouseSettings.qml
+        KeyboardSettings.qml
+        RegistrySettings.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
